Misplaced caret on Find Bar when resized too small.

This is a direct result of the Find Bar moving to under the OmniBox like a bubble and the added margins/spacing from Harmony.

Bug: 805806
Change-Id: Ib618cb80148dd02c24e8f7cae5a011439813d4ea
Reviewed-on: https://chromium-review.googlesource.com/926715
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Allen Bauer <kylixrd@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542528}
Former-commit-id: 15a431d1396d7502a3ff7037cfd71dffd54b3e30