ui/views/controls/textfield/textfield.cc
@@ -266,6 +266,7 @@ Textfield::Textfield()
       scheduled_text_edit_command_(ui::TextEditCommand::INVALID_COMMAND),
       read_only_(false),
       default_width_in_chars_(0),
+      minimum_width_in_chars_(-1),
       use_default_text_color_(true),
       use_default_background_color_(true),
       use_default_selection_text_color_(true),
@@ -513,6 +514,16 @@ void Textfield::SetFontList(const gfx::FontList& font_list) {
   PreferredSizeChanged();
 }
 
+void Textfield::SetDefaultWidthInChars(int default_width) {
+  DCHECK_GE(default_width, 0);
+  default_width_in_chars_ = default_width;
+}
+
+void Textfield::SetMinimumWidthInChars(int minimum_width) {
+  DCHECK_GE(minimum_width, -1);
+  minimum_width_in_chars_ = minimum_width;
+}
+
 base::string16 Textfield::GetPlaceholderText() const {
   return placeholder_text_;
 }
@@ -612,12 +623,22 @@ int Textfield::GetBaseline() const {
 }
 
 gfx::Size Textfield::CalculatePreferredSize() const {
-  const gfx::Insets& insets = GetInsets();
+  DCHECK_GE(default_width_in_chars_, minimum_width_in_chars_);
   return gfx::Size(
       GetFontList().GetExpectedTextWidth(default_width_in_chars_) +
-          insets.width(),
+          GetInsets().width(),
       LayoutProvider::GetControlHeightForFont(style::CONTEXT_TEXTFIELD,
                                               GetTextStyle(), GetFontList()));
+}
+
+gfx::Size Textfield::GetMinimumSize() const {
+  DCHECK_LE(minimum_width_in_chars_, default_width_in_chars_);
+  gfx::Size minimum_size = View::GetMinimumSize();
+  if (minimum_width_in_chars_ >= 0)
+    minimum_size.set_width(
+        GetFontList().GetExpectedTextWidth(minimum_width_in_chars_) +
+        GetInsets().width());
+  return minimum_size;
 }
 
 const char* Textfield::GetClassName() const {
