ui/views/layout/box_layout.h
@@ -132,10 +132,15 @@ class VIEWS_EXPORT BoxLayout : public LayoutManager {
   // the basis, free space along the main axis is distributed to views in the
   // ratio of their flex weights. Similarly, if the views will overflow the
   // parent, space is subtracted in these ratios.
+  // If true is passed in for |use_min_size|, the given view's minimum size
+  // is then obtained from calling View::GetMinimumSize(). This will be the
+  // minimum allowed size for the view along the main axis. False
+  // for |use_min_size| (the default) will allow the |view| to be resized to a
+  // minimum size of 0.
   //
   // A flex of 0 means this view is not resized. Flex values must not be
   // negative.
-  void SetFlexForView(const View* view, int flex);
+  void SetFlexForView(const View* view, int flex, bool use_min_size = false);
 
   // Clears the flex for the given |view|, causing it to use the default
   // flex.
@@ -187,10 +192,18 @@ class VIEWS_EXPORT BoxLayout : public LayoutManager {
     DISALLOW_COPY_AND_ASSIGN(ViewWrapper);
   };
 
-  using FlexMap = std::map<const View*, int>;
+  struct Flex {
+    int flex_weight;
+    bool use_min_size;
+  };
+
+  using FlexMap = std::map<const View*, Flex>;
 
   // Returns the flex for the specified |view|.
   int GetFlexForView(const View* view) const;
+
+  // Returns the minimum size for the specified |view|.
+  int GetMinimumSizeForView(const View* view) const;
 
   // Returns the size and position along the main axis of |rect|.
   int MainAxisSize(const gfx::Rect& rect) const;
